--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,7 +3,26 @@
 @tailwind utilities;
 
 .section {
-    @apply text-6xl font-bold text-primary sticky top-0 w-full bg-[#F9F5F0]/80 backdrop-blur-sm px-48 py-12;
+    @apply text-4xl font-bold text-primary;
+    @apply lg:text-6xl;
+    @apply sticky top-0 w-full bg-[#F9F5F0]/80 backdrop-blur-sm;
+    @apply px-8 lg:px-48 py-6 lg:py-12;
+}
+
+.about-me {
+    @apply flex flex-col justify-start items-start;
+    @apply w-full lg:w-1/2;
+    @apply border border-gray-400 border-x-0;
+    @apply px-8 py-24 lg:py-12 lg:p-24;
+}
+
+.about-me:nth-child(2) {
+    @apply lg:pl-24;
+}
+
+.about-me:nth-child(1) {
+    @apply border-b-0 lg:border-b lg:border-r;
+    @apply lg:pl-48;
 }
 
 a {
